fix: Modal gets z-index 9999

--- a/wp-content/themes/premedia-theme/assets/sass/map.scss
+++ b/wp-content/themes/premedia-theme/assets/sass/map.scss
@@ -117,7 +117,7 @@ html:has(.modal[open]) {
     position: absolute;
     top: 0;
     left: 0;
-    z-index: 1001;
+    z-index: 9999;
 }
 
 .modal:not([open]) {
